# file_access_manager

./: .coverage  .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: 404.html  Automation.md  Projects.md  README.md  index.html  objects.inv  sitemap.xml
docs/Automation/: index.html
docs/CHANGELOG/: index.html
docs/Projects/: index.html
docs/coverage/: class_index.html  function_index.html  index.html  status.json  z_17673bd8535f8d4b_access_py.html  z_17673bd8535f8d4b_cli_py.html  z_17673bd8535f8d4b_locations_py.html  z_17673bd8535f8d4b_project_py.html  z_a44f0ac069e85531_test_project_py.html
docs/functions/: Access.md  Locations.md  Projects.md
docs/functions/Access/: index.html
docs/functions/Locations/: index.html
docs/functions/Projects/: index.html
docs/search/: search_index.json
docs_source/: Automation.md  CHANGELOG.md  Projects.md  README.md  build_function_docs.sh
docs_source/functions/: Access.md  Locations.md  Projects.md
scripts/: update_cli_docs.py
src/file_access_manager/: __init__.py  access.py  cli.py  locations.py  project.py
tests/: test_project.py
